UserGuide hinzugefügt, finaler cleanup (1)